# gimpsep-bmcc

./: .gitignore  CMakeLists.txt  Project  README.md  gimpsep-bmcc-VSProject.sln  main.cpp
gimpsep-bmcc-VSProject/: CMakeLists.txt  gimpsep-bmcc-VSProject.vcxproj  gimpsep-bmcc-VSProject.vcxproj.filters  main.cpp
gimpsep-bmcc-VSProject/Release/gimpsep-.e1bb6222.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gimpsep-bmcc-VSProject.lastbuildstate
gimpsep-bmcc-VSProject/controller/: Controller.cpp  Controller.h
gimpsep-bmcc-VSProject/gimpsep-.e1bb6222/Debug/: vc143.idb
gimpsep-bmcc-VSProject/gimpsep-.e1bb6222/Debug/gimpsep-.e1bb6222.tlog/: gimpsep-bmcc-VSProject.lastbuildstate
gimpsep-bmcc-VSProject/model/: ImageModel.cpp  ImageModel.h
gimpsep-bmcc-VSProject/students programs/: save_grey_students.cpp
gimpsep-bmcc-VSProject/view/: View.cpp  View.h
gimpsep-bmcc-VSProject/x64/Release/: gimpsep-bmcc-VSProject.exe.recipe  gimpsep-bmcc-VSProject.iobj  gimpsep-bmcc-VSProject.ipdb
gimpsep-bmcc-VSProject/x64/Release/gimpsep-.e1bb6222.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  gimpsep-bmcc-VSProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
